--- a/views/impressum.pug
+++ b/views/impressum.pug
@@ -1,49 +1,50 @@
 extends layout
 block content
-    section.hero.is-dark
-        div.hero-body
-            div.container
-                h1.title Impressum und Datenschutz
-                h2.subtitle Hier finden sie unser Impressum und unsere Datenschutz Informationen
-    section.section
-        div.container.is-thin
-            div.container.is-fluid.content.is-medium
-                h2.title Datenschutzerklärung
-                <p>Verantwortliche Stelle im Sinne der Datenschutzgesetze, insbesondere der EU-Datenschutzgrundverordnung (DSGVO), ist:</p>
-                <br/>
-                <p>Sisko Web Solutions<br/>Matteo Piatti<br/>Mürtschenstrasse 9<br/>8640 Rapperswil</p>
-                <p>E-Mail: matteo.piatti@sisko-solutions.ch<br/>Website: http://sisko-solutions.ch/<br/>Telefon: +41 77 218 74 27 </p>
-                <p>&nbsp;</p>
-                h2.title Allgemeiner Hinweis
-                <p>Gest&uuml;tzt auf Artikel 13 der schweizerischen Bundesverfassung und die datenschutzrechtlichen Bestimmungen des Bundes (Datenschutzgesetz, DSG) hat jede Person Anspruch auf Schutz ihrer Privatsphäre sowie auf Schutz vor Missbrauch ihrer pers&ouml;nlichen Daten. Die Betreiber dieser Seiten nehmen den Schutz Ihrer pers&ouml;nlichen Daten sehr ernst. Wir behandeln Ihre personenbezogenen Daten vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften sowie dieser Datenschutzerklärung.</p>
-                <p>In Zusammenarbeit mit unseren Hosting-Providern bem&uuml;hen wir uns, die Datenbanken so gut wie m&ouml;glich vor fremden Zugriffen, Verlusten, Missbrauch oder vor Fälschung zu sch&uuml;tzen.</p>
-                <p>Wir weisen darauf hin, dass die Daten&uuml;bertragung im Internet (z.B. bei der Kommunikation per E-Mail) Sicherheitsl&uuml;cken aufweisen kann. Ein l&uuml;ckenloser Schutz der Daten vor dem Zugriff durch Dritte ist nicht m&ouml;glich.</p>
-                <p>Durch die Nutzung dieser WebSite erklären Sie sich mit der Erhebung, Verarbeitung und Nutzung von Daten gemäss der nachfolgenden Beschreibung einverstanden. Diese WebSite kann grundsätzlich ohne Registrierung besucht werden. Dabei werden Daten wie beispielsweise aufgerufene Seiten bzw. Namen der abgerufenen Datei, Datum und Uhrzeit zu statistischen Zwecken auf dem Server gespeichert, ohne dass diese Daten unmittelbar auf Ihre Person bezogen werden. Personenbezogene Daten, insbesondere Name, Adresse oder E-Mail-Adresse werden soweit m&ouml;glich auf freiwilliger Basis erhoben. Ohne Ihre Einwilligung erfolgt keine Weitergabe der Daten an Dritte.</p>
-                <p>&nbsp;</p>
-                h2.title Datenschutzerklärung f&uuml;r SSL-Verschl&uuml;sselung
-                <p>Diese WebSite nutzt aus Gr&uuml;nden der Sicherheit und zum Schutz der &Uuml;bertragung vertraulicher Inhalte, wie zum Beispiel der Anfragen, die Sie an uns als Seitenbetreiber senden, eine SSL-Verschl&uuml;sselung. Eine verschl&uuml;sselte Verbindung erkennen Sie daran, dass die Adresszeile des Browsers von &quot;http://&quot; auf &quot;https://&quot; wechselt und an dem Schloss-Symbol in Ihrer Browserzeile.</p>
-                <p>Wenn die SSL Verschl&uuml;sselung aktiviert ist, k&ouml;nnen die Daten, die Sie an uns &uuml;bermitteln, nicht von Dritten mitgelesen werden.</p>
-                <p>&nbsp;</p>
-                <h2>Datenschutzerklärung f&uuml;r Kontaktformular</h2>
-                <p>Wenn Sie uns per Kontaktformular Anfragen zukommen lassen, werden Ihre Angaben aus dem Anfrageformular inklusive der von Ihnen dort angegebenen Kontaktdaten zwecks Bearbeitung der Anfrage und f&uuml;r den Fall von Anschlussfragen bei uns gespeichert. Diese Daten geben wir nicht ohne Ihre Einwilligung weiter.</p>
-                <p>&nbsp;</p>
-                h2.title Verwendung von Google reCAPTCHA
-                <p>Diese WebSite verwendet den Dienst reCAPTCHA der Google Inc. (1600 Amphitheatre Parkway, Mountain View, CA 94043, USA; „Google“). Die Abfrage dient dem Zweck der Unterscheidung, ob die Eingabe durch einen Menschen oder durch automatisierte, maschinelle Verarbeitung erfolgt. Die Abfrage schliesst den Versand der IP-Adresse und ggf. weiterer von Google f&uuml;r den Dienst reCAPTCHA ben&ouml;tigter Daten an Google ein. Zu diesem Zweck wird Ihre Eingabe an Google &uuml;bermittelt und dort weiter verwendet. Ihre IP-Adresse wird von Google jedoch innerhalb von Mitgliedstaaten der Europäischen Union oder in anderen Vertragsstaaten des Abkommens &uuml;ber den Europäischen Wirtschaftsraum zuvor gek&uuml;rzt. Nur in Ausnahmefällen wird die volle IP-Adresse an einen Server von Google in den USA &uuml;bertragen und dort gek&uuml;rzt. Im Auftrag des Betreibers dieser Website wird Google diese Informationen benutzen, um Ihre Nutzung dieses Dienstes auszuwerten. Die im Rahmen von reCaptcha von Ihrem Browser &uuml;bermittelte IP-Adresse wird nicht mit anderen Daten von Google zusammengef&uuml;hrt. Ihre Daten werden dabei gegebenenfalls auch in die USA &uuml;bermittelt. F&uuml;r Daten&uuml;bermittlungen in die USA ist ein Angemessenheitsbeschluss der Europäischen Kommission, das "Privacy Shield", vorhanden. Google nimmt am "Privacy Shield" teil und hat sich den Vorgaben unterworfen. Mit Betätigen der Abfrage willigen Sie in die Verarbeitung Ihrer Daten ein. Die Verarbeitung erfolgt auf Grundlage des Art. 6 (1) lit. a DSGVO mit Ihrer Einwilligung. Sie k&ouml;nnen Ihre Einwilligung jederzeit widerrufen, ohne dass die Rechtmässigkeit der aufgrund der Einwilligung bis zum Widerruf erfolgten Verarbeitung ber&uuml;hrt wird.</p>
-                <p>Nähere Informationen zu Google reCAPTCHA sowie die dazugeh&ouml;rige Datenschutzerklärung finden Sie unter: <a href="https://www.google.com/privacy/ads/" target="_blank" rel="noopener">https://www.google.com/privacy/ads/</a></p>
-                <p>&nbsp;</p>
-                h2.title Urheberrechte
-                <p>Die Urheber- und alle anderen Rechte an Inhalten, Bildern, Fotos oder anderen Dateien auf der Website, geh&ouml;ren ausschliesslich dem Betreiber dieser Website oder den speziell genannten Rechteinhabern. Für die Reproduktion von sämtlichen Dateien, ist die schriftliche Zustimmung des Urheberrechtsträgers im Voraus einzuholen.</p>
-                <p>Wer ohne Einwilligung des jeweiligen Rechteinhabers eine Urheberrechtsverletzung begeht, kann sich strafbar und allenfalls Schadenersatzpflichtig machen.</p>
-                <p>&nbsp;</p>
-                h2.title Allgemeiner Haftungsausschluss
-                <p>Alle Angaben unseres Internetangebotes wurden sorgfältig gepr&uuml;ft. Wir bem&uuml;hen uns, unser Informationsangebot aktuell, inhaltlich richtig und vollständig anzubieten. Trotzdem kann das Auftreten von Fehlern nicht v&ouml;llig ausgeschlossen werden, womit wir keine Garantie f&uuml;r Vollständigkeit, Richtigkeit und Aktualität von Informationen auch journalistisch-redaktioneller Art &uuml;bernehmen k&ouml;nnen. Haftungsanspr&uuml;che aus Schäden materieller oder ideeller Art, die durch die Nutzung der angebotenen Informationen verursacht wurden, sind ausgeschlossen, sofern kein nachweislich vorsätzliches oder grob fahrlässiges Verschulden vorliegt.</p>
-                <p>Der Herausgeber kann nach eigenem Ermessen und ohne Ank&uuml;ndigung Texte verändern oder l&ouml;schen und ist nicht verpflichtet, Inhalte dieser Website zu aktualisieren. Die Benutzung bzw. der Zugang zu dieser Website geschieht auf eigene Gefahr des Besuchers. Der Herausgeber, seine Auftraggeber oder Partner sind nicht verantwortlich f&uuml;r Schäden, wie direkte, indirekte, zufällige, vorab konkret zu bestimmende oder Folgeschäden, die angeblich durch den Besuch dieser Website entstanden sind und &uuml;bernehmen hierf&uuml;r folglich keine Haftung.</p>
-                <p>Der Herausgeber &uuml;bernimmt ebenfalls keine Verantwortung und Haftung f&uuml;r die Inhalte und die Verf&uuml;gbarkeit von Webseiten Dritter, die &uuml;ber externe Links dieser Webseite erreichbar sind. F&uuml;r den Inhalt der verlinkten Seiten sind ausschliesslich deren Betreiber verantwortlich. Der Herausgeber distanziert sich damit ausdr&uuml;cklich von allen Inhalten Dritter, die m&ouml;glicherweise straf- oder haftungsrechtlich relevant sind oder gegen die guten Sitten verstossen.</p>
-                <p>&nbsp;</p>
-                h2.title Änderungen
-                <p>Wir k&ouml;nnen diese Datenschutzerklärung jederzeit ohne Vorank&uuml;ndigung anpassen. Es gilt die jeweils aktuelle, auf unserer Website publizierte Fassung. Soweit die Datenschutzerklärung Teil einer Vereinbarung mit Ihnen ist, werden wir Sie im Falle einer Aktualisierung über die änderung per E-Mail oder auf andere geeignete Weise informieren.</p>
-                <p>&nbsp;</p>
-                h2.title Fragen an den Datenschutzbeauftragten
-                <p>Wenn Sie Fragen zum Datenschutz haben, schreiben Sie uns bitte eine E-Mail oder wenden Sie sich direkt an die f&uuml;r den Datenschutz zu Beginn der Datenschutzerklärung aufgef&uuml;hrten, verantwortlichen Person in unserer Organisation.</p>
-                <p>&nbsp;</p>
-                <p>Rapperswil, 27.11.2018<br/>Quelle: <a href="https://www.swissanwalt.ch" target="_blank" rel="noopener" style="color: inherit;">SwissAnwalt</a></p>
+    div.impressum
+        section.hero.is-dark
+            div.hero-body
+                div.container
+                    h1.title Impressum und Datenschutz
+                    h2.subtitle Hier finden sie unser Impressum und unsere Datenschutz Informationen
+        section.section
+            div.container.is-thin
+                div.container.is-fluid.content.is-medium
+                    h2.title Datenschutzerklärung
+                    <p>Verantwortliche Stelle im Sinne der Datenschutzgesetze, insbesondere der EU-Datenschutzgrundverordnung (DSGVO), ist:</p>
+                    <br/>
+                    <p>Sisko Web Solutions<br/>Matteo Piatti<br/>Mürtschenstrasse 9<br/>8640 Rapperswil</p>
+                    <p>E-Mail: matteo.piatti@sisko-solutions.ch<br/>Website: http://sisko-solutions.ch/<br/>Telefon: +41 77 218 74 27 </p>
+                    <p>&nbsp;</p>
+                    h2.title Allgemeiner Hinweis
+                    <p>Gest&uuml;tzt auf Artikel 13 der schweizerischen Bundesverfassung und die datenschutzrechtlichen Bestimmungen des Bundes (Datenschutzgesetz, DSG) hat jede Person Anspruch auf Schutz ihrer Privatsphäre sowie auf Schutz vor Missbrauch ihrer pers&ouml;nlichen Daten. Die Betreiber dieser Seiten nehmen den Schutz Ihrer pers&ouml;nlichen Daten sehr ernst. Wir behandeln Ihre personenbezogenen Daten vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften sowie dieser Datenschutzerklärung.</p>
+                    <p>In Zusammenarbeit mit unseren Hosting-Providern bem&uuml;hen wir uns, die Datenbanken so gut wie m&ouml;glich vor fremden Zugriffen, Verlusten, Missbrauch oder vor Fälschung zu sch&uuml;tzen.</p>
+                    <p>Wir weisen darauf hin, dass die Daten&uuml;bertragung im Internet (z.B. bei der Kommunikation per E-Mail) Sicherheitsl&uuml;cken aufweisen kann. Ein l&uuml;ckenloser Schutz der Daten vor dem Zugriff durch Dritte ist nicht m&ouml;glich.</p>
+                    <p>Durch die Nutzung dieser WebSite erklären Sie sich mit der Erhebung, Verarbeitung und Nutzung von Daten gemäss der nachfolgenden Beschreibung einverstanden. Diese WebSite kann grundsätzlich ohne Registrierung besucht werden. Dabei werden Daten wie beispielsweise aufgerufene Seiten bzw. Namen der abgerufenen Datei, Datum und Uhrzeit zu statistischen Zwecken auf dem Server gespeichert, ohne dass diese Daten unmittelbar auf Ihre Person bezogen werden. Personenbezogene Daten, insbesondere Name, Adresse oder E-Mail-Adresse werden soweit m&ouml;glich auf freiwilliger Basis erhoben. Ohne Ihre Einwilligung erfolgt keine Weitergabe der Daten an Dritte.</p>
+                    <p>&nbsp;</p>
+                    h2.title Datenschutzerklärung f&uuml;r SSL-Verschl&uuml;sselung
+                    <p>Diese WebSite nutzt aus Gr&uuml;nden der Sicherheit und zum Schutz der &Uuml;bertragung vertraulicher Inhalte, wie zum Beispiel der Anfragen, die Sie an uns als Seitenbetreiber senden, eine SSL-Verschl&uuml;sselung. Eine verschl&uuml;sselte Verbindung erkennen Sie daran, dass die Adresszeile des Browsers von &quot;http://&quot; auf &quot;https://&quot; wechselt und an dem Schloss-Symbol in Ihrer Browserzeile.</p>
+                    <p>Wenn die SSL Verschl&uuml;sselung aktiviert ist, k&ouml;nnen die Daten, die Sie an uns &uuml;bermitteln, nicht von Dritten mitgelesen werden.</p>
+                    <p>&nbsp;</p>
+                    h2.title Datenschutzerklärung für Kontaktformular
+                    <p>Wenn Sie uns per Kontaktformular Anfragen zukommen lassen, werden Ihre Angaben aus dem Anfrageformular inklusive der von Ihnen dort angegebenen Kontaktdaten zwecks Bearbeitung der Anfrage und f&uuml;r den Fall von Anschlussfragen bei uns gespeichert. Diese Daten geben wir nicht ohne Ihre Einwilligung weiter.</p>
+                    <p>&nbsp;</p>
+                    h2.title Verwendung von Google reCAPTCHA
+                    <p>Diese WebSite verwendet den Dienst reCAPTCHA der Google Inc. (1600 Amphitheatre Parkway, Mountain View, CA 94043, USA; „Google“). Die Abfrage dient dem Zweck der Unterscheidung, ob die Eingabe durch einen Menschen oder durch automatisierte, maschinelle Verarbeitung erfolgt. Die Abfrage schliesst den Versand der IP-Adresse und ggf. weiterer von Google f&uuml;r den Dienst reCAPTCHA ben&ouml;tigter Daten an Google ein. Zu diesem Zweck wird Ihre Eingabe an Google &uuml;bermittelt und dort weiter verwendet. Ihre IP-Adresse wird von Google jedoch innerhalb von Mitgliedstaaten der Europäischen Union oder in anderen Vertragsstaaten des Abkommens &uuml;ber den Europäischen Wirtschaftsraum zuvor gek&uuml;rzt. Nur in Ausnahmefällen wird die volle IP-Adresse an einen Server von Google in den USA &uuml;bertragen und dort gek&uuml;rzt. Im Auftrag des Betreibers dieser Website wird Google diese Informationen benutzen, um Ihre Nutzung dieses Dienstes auszuwerten. Die im Rahmen von reCaptcha von Ihrem Browser &uuml;bermittelte IP-Adresse wird nicht mit anderen Daten von Google zusammengef&uuml;hrt. Ihre Daten werden dabei gegebenenfalls auch in die USA &uuml;bermittelt. F&uuml;r Daten&uuml;bermittlungen in die USA ist ein Angemessenheitsbeschluss der Europäischen Kommission, das "Privacy Shield", vorhanden. Google nimmt am "Privacy Shield" teil und hat sich den Vorgaben unterworfen. Mit Betätigen der Abfrage willigen Sie in die Verarbeitung Ihrer Daten ein. Die Verarbeitung erfolgt auf Grundlage des Art. 6 (1) lit. a DSGVO mit Ihrer Einwilligung. Sie k&ouml;nnen Ihre Einwilligung jederzeit widerrufen, ohne dass die Rechtmässigkeit der aufgrund der Einwilligung bis zum Widerruf erfolgten Verarbeitung ber&uuml;hrt wird.</p>
+                    <p>Nähere Informationen zu Google reCAPTCHA sowie die dazugeh&ouml;rige Datenschutzerklärung finden Sie unter: <a href="https://www.google.com/privacy/ads/" target="_blank" rel="noopener">https://www.google.com/privacy/ads/</a></p>
+                    <p>&nbsp;</p>
+                    h2.title Urheberrechte
+                    <p>Die Urheber- und alle anderen Rechte an Inhalten, Bildern, Fotos oder anderen Dateien auf der Website, geh&ouml;ren ausschliesslich dem Betreiber dieser Website oder den speziell genannten Rechteinhabern. Für die Reproduktion von sämtlichen Dateien, ist die schriftliche Zustimmung des Urheberrechtsträgers im Voraus einzuholen.</p>
+                    <p>Wer ohne Einwilligung des jeweiligen Rechteinhabers eine Urheberrechtsverletzung begeht, kann sich strafbar und allenfalls Schadenersatzpflichtig machen.</p>
+                    <p>&nbsp;</p>
+                    h2.title Allgemeiner Haftungsausschluss
+                    <p>Alle Angaben unseres Internetangebotes wurden sorgfältig gepr&uuml;ft. Wir bem&uuml;hen uns, unser Informationsangebot aktuell, inhaltlich richtig und vollständig anzubieten. Trotzdem kann das Auftreten von Fehlern nicht v&ouml;llig ausgeschlossen werden, womit wir keine Garantie f&uuml;r Vollständigkeit, Richtigkeit und Aktualität von Informationen auch journalistisch-redaktioneller Art &uuml;bernehmen k&ouml;nnen. Haftungsanspr&uuml;che aus Schäden materieller oder ideeller Art, die durch die Nutzung der angebotenen Informationen verursacht wurden, sind ausgeschlossen, sofern kein nachweislich vorsätzliches oder grob fahrlässiges Verschulden vorliegt.</p>
+                    <p>Der Herausgeber kann nach eigenem Ermessen und ohne Ank&uuml;ndigung Texte verändern oder l&ouml;schen und ist nicht verpflichtet, Inhalte dieser Website zu aktualisieren. Die Benutzung bzw. der Zugang zu dieser Website geschieht auf eigene Gefahr des Besuchers. Der Herausgeber, seine Auftraggeber oder Partner sind nicht verantwortlich f&uuml;r Schäden, wie direkte, indirekte, zufällige, vorab konkret zu bestimmende oder Folgeschäden, die angeblich durch den Besuch dieser Website entstanden sind und &uuml;bernehmen hierf&uuml;r folglich keine Haftung.</p>
+                    <p>Der Herausgeber &uuml;bernimmt ebenfalls keine Verantwortung und Haftung f&uuml;r die Inhalte und die Verf&uuml;gbarkeit von Webseiten Dritter, die &uuml;ber externe Links dieser Webseite erreichbar sind. F&uuml;r den Inhalt der verlinkten Seiten sind ausschliesslich deren Betreiber verantwortlich. Der Herausgeber distanziert sich damit ausdr&uuml;cklich von allen Inhalten Dritter, die m&ouml;glicherweise straf- oder haftungsrechtlich relevant sind oder gegen die guten Sitten verstossen.</p>
+                    <p>&nbsp;</p>
+                    h2.title Änderungen
+                    <p>Wir k&ouml;nnen diese Datenschutzerklärung jederzeit ohne Vorank&uuml;ndigung anpassen. Es gilt die jeweils aktuelle, auf unserer Website publizierte Fassung. Soweit die Datenschutzerklärung Teil einer Vereinbarung mit Ihnen ist, werden wir Sie im Falle einer Aktualisierung über die änderung per E-Mail oder auf andere geeignete Weise informieren.</p>
+                    <p>&nbsp;</p>
+                    h2.title Fragen an den Datenschutzbeauftragten
+                    <p>Wenn Sie Fragen zum Datenschutz haben, schreiben Sie uns bitte eine E-Mail oder wenden Sie sich direkt an die f&uuml;r den Datenschutz zu Beginn der Datenschutzerklärung aufgef&uuml;hrten, verantwortlichen Person in unserer Organisation.</p>
+                    <p>&nbsp;</p>
+                    <p>Rapperswil, 27.11.2018<br/>Quelle: <a href="https://www.swissanwalt.ch" target="_blank" rel="noopener" style="color: inherit;">SwissAnwalt</a></p>
