--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,6 +13,7 @@ html
     meta(name="copyright" content="Sisko Web Solutions")
     meta(name="robots" content="INDEX, FOLLOW")
     meta(name="viewport" content="initial-scale=1, viewport-fit=cover")
+    meta(name="google-site-verification" content="CWkBJZA0neiSPX0DnH3kMeVJBRKWt7930Fo6VVJG308")
     script(src='/javascripts/main.js')
 
     //Captcha
