--- a/views/contact.pug
+++ b/views/contact.pug
@@ -9,6 +9,7 @@ block content
     section.section
         div.container.is-thin
             div.container.is-fluid
+                p #{message}
                 form(action='/kontakt', name='contact', id='contact', method='post')
                     div.field.half-width-form
                         label.label(for="contactname") Name
